# claude-launcher

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  test_output.txt
.claude/: settings.local.json
.claude-launcher/: config.example.json  config.json  config.lamdera-worktree.json  config.nodejs-worktree.json  todos.json
docs/: WORKTREE.md  worktree-example.md  worktree-guide.md
src/: git_worktree.rs  git_worktree_tests.rs  lib.rs  main.rs
