[package]
name = "claude-launcher"
version = "0.2.0"
edition = "2021"
description = "A tool for managing parallel AI agent tasks with Claude"
license = "MIT"
repository = "https://github.com/CharlonTank/claude-launcher"
homepage = "https://github.com/CharlonTank/claude-launcher"
documentation = "https://github.com/CharlonTank/claude-launcher#readme"
readme = "README.md"
keywords = ["claude", "ai", "automation", "parallel", "launcher"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "claude-launcher"
path = "src/main.rs"
